fixed styling overlap on mobile

--- a/client/src/styles/Homescreen.css
+++ b/client/src/styles/Homescreen.css
@@ -33,6 +33,12 @@
   margin-bottom:-3rem;
 }
 
+.desc-swipe{
+  margin-top:5rem;
+  color:#ff6600;
+  margin-bottom:-2rem;
+}
+
 .signUp-show{
   display:absolute;
   top:0;
